secondfile/objects/RDS_SWIP_Contacts__c.object
<CustomObject>
    <description>Premise Details-Premise Data-Circuit and VLAN Details-RDS-SWIP Contacts</description>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Address-Address Line1</description>
        <label>Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Address-Address Line2</description>
        <label>Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Address-Attention</description>
        <label>Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_and_VLAN_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts</description>
        <label>RDS-Circuit and VLAN Details</label>
        <referenceTo>Circuit_and_VLAN_Details__c</referenceTo>
        <relationshipLabel>RDS-SWIP Contacts</relationshipLabel>
        <relationshipName>RDS_SWIP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Address-City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Company Name</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Address-Country</description>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Email Address</description>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-SWIP Contact Name-First Name</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-SWIP Contact Name-Last Name</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-SWIP Contact Name-Middle Name</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nic_Handle__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-SWIP Details-Nic Handle</description>
        <label>Nic Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Phone Number</description>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_SWIP_Contact_Premise_Number__c</fullName>
        <description>This is a technical field to identify Premise to which the record is associated. Not required on page layout.</description>
        <formula>Circuit_and_VLAN_Details__r.Premise__r.Premise_Number__c</formula>
        <label>RDS SWIP Contact Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Swip_Account_Id__c</fullName>
        <formula>Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Opportunity__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDS Swip Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Address-State</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Extension__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Address-Zip-Zip Code Extension</description>
        <label>Zip Code Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Address-Zip-Zip Code</description>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Geo_Code__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-SWIP Contacts-Company Details-Address-Zip-Zip Geo Code</description>
        <label>Zip Geo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-SWIP Contacts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RSC-{0000}</displayFormat>
        <label>RDS-SWIP Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-SWIP Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RDS_Edit_Expired</fullName>
        <active>true</active>
        <description>RDS Edit Expired</description>
        <errorConditionFormula>AND(OR(if(Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Edit_Expired_Date__c&lt;NOW(),True,False),ISPICKVAL( Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),
		$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
		$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
                $Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;, $Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_SWIPCon</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-SWIP Contacts record.</errorMessage>
    </validationRules>
</CustomObject>